frontend/src/index.css
:root {
    --theme-xl-gray: #DEDEDE;
    --theme-l-gray: #AAAAAA;
    --theme-m-gray: #525252;
    --theme-d-gray: #1A1A1A;

    --theme-xl-blue: #B4D5EB;
    --theme-l-blue: #77BCEA;
    --theme-blue: #49AEF1;
    --theme-d-blue: #2DA2EF;

    --theme-xl-orange: #EFCEAD;
    --theme-l-orange: #F1AD69;
    --theme-orange: #FD9934;
    --theme-d-orange: #FD8A17;

    --theme-error: #F12540;
}

* {
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

html, body {
    margin: 0;
    padding: 0;
    position: fixed;
}

#main-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 42px;
    padding: 0 4px;

    display: flex;
    justify-content: center;

    background-color: var(--theme-orange);
    border-bottom: 2px solid black;
}

#header-content {
    width: 100%;
    max-width: 100ch;
    height: 100%;
    margin: 0;
    padding: 0;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

#site-name {
    font-size: 2rem;
    line-height: 2rem;
    color: black;
    user-select: none;
}

#site-name-1 {
    font-weight: 400;
}

#site-name-2 {
    font-weight: 700;
}

.animated-text-underline::after {
    height: 4px;
    width: 100%;

    content: '';
    position: absolute;
    bottom: 0;
    left: 0;

    background-color: white;

    transform: scaleX(0);
    transform-origin: bottom right;
    transition: transform 0.2s ease-out;
}

.animated-text-underline:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
}

#main-content {
    width: 100%;
    position: fixed;
    top: 42px; /* Adjust for nav bar */
}

.columns-wrapper {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
}

.left-column,
.middle-column,
.right-column {
    width: 100%;
    padding: 5px;

    display: flex;
    flex-flow: column nowrap;
    justify-content: start;

    border: 1px solid var(--theme-l-gray);
    border-radius: 5px;
}

.left-column,
.right-column {
    max-width: 30ch;
    margin: 20px;

    display: flex;
    flex-flow: column nowrap;
}

.left-column {
    align-items: end;
}

.right-column {
    align-items: start;
}

.middle-column {
    max-width: 100ch;
    margin: 20px 0px;

    align-items: center;
}

.middle-column > main {
    height: 100%;
    width: 100%;
}

.profile-image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

